# kuaa

./: .gitignore  .importlinter  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  PORTFOLIO_FIXES.md  README.md  SETUP.md  app.py  app_streamlit.py  gitignore  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  refactor-guards.yml
api/: contexts.py  deps.py  error_handlers.py  jobs.py  middleware.py  schemas.py  server.py  templates.py
api/routes/: about.py  annotate.py  annotate_description.py  annotate_tags.py  eval.py  export.py  library.py  palette.py  processing.py  rimas.py  scenes.py  search.py  system.py  tabs.py
api/services/: __init__.py  _about_data.py  _annotate_curation.py  _field_errors.py  _scene_detail.py  _scenes_list.py  _search_dispatch.py  _search_hits.py  _search_image.py  _search_query.py  _search_render.py  _search_rerank.py  _search_text.py  about_service.py  annotations.py  catalog.py  chrome_service.py  dtos.py  eval_service.py  film_context.py  film_service.py  library_admin.py  library_render.py  palette_service.py  processing_render.py  processing_service.py  processing_stats.py  rhymes_service.py  scenes_service.py  search.py
api/services/scenes/: __init__.py  _cards.py  _film_grid.py  _grouping.py  _inspector.py  _timeline.py  _tipo.py
config/: default.yaml  demo.yaml
config/domains/: archive.yaml  media_broadcast.yaml
data/demo/: README.md  manifest.json
data/eval/: README.md  archive_demo_queries.pt.yaml  archive_demo_queries.yaml  default.jsonl  default.queries.json  m3_full_queries.yaml  m3_text_queries.yaml  media_broadcast_queries.yaml
data/films/jeca_tatu_1959/: film.json
data/perf/: bench_results.json
docs/: API.md  ARCHITECTURE.md  CASE_STUDY.md  DEMO.md  DEMO_DATA.md  DOMAIN_PACKS.md  EVALUATION.md  GPU_LLAMA_CPP_CUDA_BUILD.md  MIGRATIONS.md  MODEL_INVENTORY.md  OPERATIONS.md  PERFORMANCE.md  PRIVACY_OFFLINE.md  PROJECT_BRIEF.md  PROTOCOL_OPTION.md  RERANKER_DECISION.md  ROADMAP.md  index.html
latest_claude_design_version/: About.html  Cinemateca Mojica.html  Eval.html  Identity Exploration.html  Landing.html  Mojica Variations.html  Mojica.html
latest_claude_design_version/mojica/: app.jsx  frame.jsx  linear.jsx
latest_claude_design_version/mojica-fr/: anotar.jsx  app.jsx  buscar.jsx  cenas.jsx  chrome.jsx  eval.jsx  polish.jsx  proc.jsx  rimas.jsx  theme.jsx
latest_claude_design_version/shells/: arquivo.jsx  cineteca.jsx  data.js  estacao.jsx
latest_claude_design_version/uploads/: DESIGN_SYSTEM.md
scripts/: README.md  analyze_failures.py  analyze_pt_gap.py  analyze_pt_gap_evaluable.py  bench_retrieval.py  build_demo_bundle.py  check_launch_package.py  check_loc_budget.py  ensure_gpu_llama.sh  freeze_eval_run.sh  migrate_flat_to_library.py  prepare_demo.py  run_ablation.py  run_eval.py  verify_features.py  verify_fresh_run.sh  verify_reranker.py
site/: architecture.html  constraints.html  domain_packs.html  evaluation.html  index.html  run_provenance.html
site/pt-br/: architecture.html  constraints.html  domain_packs.html  evaluation.html  index.html  run_provenance.html
src/: __init__.py  __main__.py  config.py  data_prep.py  device.py  llm_describer.py  pipeline.py  scene_detector.py  visual_analyzer.py
src/cinemateca/: __init__.py  __main__.py  annotator.py  audio_extractor.py  config.py  data_prep.py  device.py  domain.py  embeddings.py  errors.py  library.py  llm_describer.py  pipeline.py  reproducibility.py  rhymes.py  run_manifest.py  scene_detector.py  scene_ids.py  timing.py  visual_analyzer.py
src/cinemateca/annotations/: __init__.py  descriptions.py  io.py  overrides.py  scenes.py
src/cinemateca/commands/: _shared.py  config_cmd.py  eval_cmd.py  library.py  process.py  serve.py
src/cinemateca/config/: __init__.py  loader.py  schema.py
src/cinemateca/eval/: __init__.py  ablation.py  annotations.py  bench.py  datasets.py  failures.py  grader_metrics.py  grades.py  metrics.py  paths.py  proxy.py  report.py  retrieval.py  seed.py  slates.py
src/cinemateca/exporters/: __init__.py  catalog.py  edl.py
src/cinemateca/models/: base.py  manifest.py  registry.py
src/cinemateca/retrieval/: __init__.py  bm25.py  corpus.py  hybrid.py  tokenize.py
src/cinemateca/rhymes/: __init__.py  algorithm.py  anchor.py  config.py  enrich.py  metadata.py
src/kuaa/: __init__.py  __main__.py  data_prep.py  device.py  domain.py  embeddings.py  errors.py  pipeline.py  run_manifest.py  scene_detector.py  scene_ids.py  timing.py  visual_analyzer.py
tests/: _snapshot.py  conftest.py  test_about_route.py  test_aggregate_search_hybrid.py  test_aggregate_snapshot.py  test_aggregate_units.py  test_annotation_stats.py  test_annotations_service.py  test_audio_extractor.py  test_audio_search_regression.py  test_catalog_service.py  test_cinemateca_search_api.py  test_clap_hf_backend.py  test_cli_audio_steps.py  test_cli_eval_clap_sanity.py  test_cli_eval_slate.py  test_cli_reembed_all.py  test_config_bm25.py  test_config_schema.py  test_cross_feature_integration.py  test_demo_bundle_builder.py  test_demo_m1.py  test_describer_gguf.py  test_describer_transformers.py  test_domain_packs.py  test_error_envelope.py  test_errors.py  test_errors_migration.py  test_eval_ablation.py  test_eval_bench.py  test_eval_error_taxonomy.py  test_eval_export.py  test_eval_failures.py  test_eval_grader_metrics.py  test_eval_grades.py  test_eval_iaa.py  test_eval_metrics.py  test_eval_modal_scoring.py  test_eval_multimodal_scoring.py  test_eval_proxy.py  (+106 more)
tests/acceptance/: test_rhymes_mmr_jeca_tatu.py
tests/e2e/: conftest.py  test_axe_a11y.py  test_focus_trap_interaction.py  test_form_error_interaction.py  test_render_smoke.py  test_skeleton_interaction.py
tests/fixtures/: audio_search_regression.json  clap_sanity_queries.json  fusion_search_regression.json  hybrid_search_regression.json
web/: babel.cfg
web/locales/: messages.pot
web/templates/: about_page.html  base.html
(+221 files in other folders)
