[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemateca-ai"
version = "0.2.1"
description = "Sistema de catalogação audiovisual com IA para acervos cinematográficos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cinemateca AI Team" }]
keywords = ["computer-vision", "cinemateca", "film-archive", "AI", "catalogação"]

# Dependências mínimas — modelos ML são opcionais para não forçar download
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Instalar tudo: pip install -e ".[full]"
full = [
    "torch>=2.0",
    "torchvision>=0.15",
    "open-clip-torch>=2.20",
    "scenedetect>=0.6",
    "ultralytics>=8.0",
    "facenet-pytorch>=2.5",
    "transformers>=4.35",
    "rich>=13.0",
    # v0.3.0 web stack
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0",
    "babel>=2.14",
    # legacy Streamlit (removed after parity confirmed)
    "streamlit>=1.28",
]
# v0.3.0 web interface: pip install -e ".[web]"
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0",
    "babel>=2.14",
]
# Somente GUI (legacy Streamlit): pip install -e ".[gui]"
gui = [
    "streamlit>=1.28",
    "rich>=13.0",
]
# Somente busca: pip install -e ".[search]"
search = [
    "torch>=2.0",
    "open-clip-torch>=2.20",
]

[project.scripts]
# Após instalação: cinemateca process --video meu_filme.mp4
cinemateca = "cinemateca.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cinemateca" = ["py.typed"]

# ── Dependency groups (PEP 735) ───────────────────────────────────────────────
# Dev tooling. `uv sync` installs it (it is the only group); excluded from the
# wheel. Not a [project.optional-dependencies] extra — `pip install -e ".[dev]"`
# no longer works. Without uv:
#   pip install -e ".[full]" && pip install pytest pytest-cov black ruff mypy
[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

# ── Ferramentas de desenvolvimento ────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # linha longa (black já cuida)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ── uv ────────────────────────────────────────────────────────────────────────
[tool.uv]
# No uv.lock is committed yet (config-only adoption — see
# docs/superpowers/specs/2026-05-16-uv-migration-scaffold-design.md).
#
# When a committed lockfile is wanted, the torch stack needs an explicit CPU
# (or CUDA) index to keep the lock reproducible and small. Fill in then:
#
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true
#
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
# torchvision = { index = "pytorch-cpu" }
