[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemateca-ai"
version = "0.6.0"
description = "Sistema de catalogação audiovisual com IA para acervos cinematográficos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cinemateca AI Team" }]
keywords = ["computer-vision", "cinemateca", "film-archive", "AI", "catalogação"]

# Dependências mínimas — modelos ML são opcionais para não forçar download
dependencies = [
    "pyyaml>=6.0",
    # numpy<2 is DELIBERATE — not stale. The default torch (>=2.0 in the
    # `full` extra) resolves to ~2.2, which is compiled against NumPy 1.x;
    # NumPy 2.x's C-API change makes every CLIP search crash with
    # "RuntimeError: Numpy is not available" (commit e3ed9da). <2 pins
    # numpy 1.26.4 and restores search. Do NOT drop the cap without a
    # paired torch>=2.4 bump (an AI-stack change that may invalidate
    # embeddings — deliberately deferred). The from-source CUDA GPU build
    # (docs/GPU_LLAMA_CPP_CUDA_BUILD.md) floats numpy to 2.x via its
    # re-resolve; that is harmless (torch 2.12+cu130 supports 1.x and 2.x)
    # and a `uv sync` downgrading it back to 1.26.4 only clobbers the
    # llama-cpp CUDA build, which ensure_gpu_llama.sh already repairs.
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    # BM25 lexical retrieval for M2 hybrid search (CLIP ⊕ BM25 via RRF).
    # PyPI name is `rank-bm25` (hyphen); import path is `rank_bm25` (underscore).
    "rank-bm25>=0.2.2",
    "tqdm>=4.65",
    # Typer 0.12+ bundles rich for colored, auto-generated help and ships
    # the `cinemateca` CLI tree (`serve`, `process`, `info`, `library *`,
    # `config show`). Kept in BASE deps (not `full`) so the CLI is
    # always available — `cinemateca info <video>` works even without
    # the AI-model extras installed.
    "typer>=0.12,<0.18",
]

[project.optional-dependencies]
# Instalar tudo: pip install -e ".[full]"
full = [
    "torch>=2.0",
    "torchvision>=0.15",
    "open-clip-torch>=2.20",
    "scenedetect>=0.6",
    "ultralytics>=8.0",
    "facenet-pytorch>=2.5",
    # GGUF describer (opt-in, keyless/offline) — see docs/GPU_LLAMA_CPP_CUDA_BUILD.md
    "llama-cpp-python>=0.3,<0.4",
    # transformers describer (DEFAULT) — Moondream2 @2025-01-09 is transformers-4
    # only: tf5 hard-fails for EVERY moondream2 revision (verified 2026-05-18).
    # Do NOT widen to <6 / >=5 without re-verifying the model loads.
    "transformers>=4.44,<5",
    "einops>=0.7",
    "huggingface-hub>=0.20",
    # Cross-encoder reranker (M2). CrossEncoder ships inside sentence-transformers;
    # it re-uses the torch + transformers wheels already in this extra.
    "sentence-transformers>=3.0",
    # pyvips[binary] — moondream2's trust_remote_code module (image_crops.py) does
    # `import pyvips` at model-load time; [binary] bundles libvips so no system
    # libvips is required (matches the cross-platform / no-source-build goal).
    "pyvips[binary]>=2.2.1",
    # Audio I/O for CLAP — pure-Python wheel, bundles libsndfile (no system dep)
    "soundfile>=0.12",
    # accelerate is required by transformers >=4.50 to use device_map for
    # model placement (from_pretrained(device_map=...)). Without it,
    # transformers 4.57+ always inits weights on meta device via
    # init_empty_weights() and has no way to materialise them without
    # device_map + accelerate — causing NotImplementedError on .to().
    "accelerate>=0.26",
    # Cross-encoder reranker (M3 Task 3.1/3.2). FlagEmbedding wraps BGE
    # rerankers including bge-reranker-v2-m3, the default model. Optional at
    # runtime — ``cinemateca.search.rerank`` lazy-imports it and raises a
    # single actionable RuntimeError when missing, so noop / disabled paths
    # never touch this dep.
    "FlagEmbedding>=1.2.0,<2",
    "rich>=13.0",
    # v0.3.0 web stack
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0",
    "babel>=2.14",
]
# v0.3.0 web interface: pip install -e ".[web]"
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
    "aiofiles>=23.0",
    "babel>=2.14",
]
# Somente busca: pip install -e ".[search]"
search = [
    "torch>=2.0",
    "open-clip-torch>=2.20",
]

[project.scripts]
# Após instalação: cinemateca process --video meu_filme.mp4
cinemateca = "cinemateca.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cinemateca" = ["py.typed"]

# ── Dependency groups (PEP 735) ───────────────────────────────────────────────
# Dev tooling. `uv sync` installs it (it is the only group); excluded from the
# wheel. Not a [project.optional-dependencies] extra — `pip install -e ".[dev]"`
# no longer works. Without uv:
#   pip install -e ".[full]" && pip install pytest pytest-cov black ruff mypy
[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "pre-commit>=4.0",
    "mypy>=1.5",
    # httpx is required by FastAPI's TestClient (starlette.testclient) — was
    # previously satisfied by system-Python leak; made explicit when uv.lock
    # enforces a clean isolated venv.
    "httpx>=0.25",
    # import-linter enforces the P1 deep-modules invariant: cinemateca.*
    # must not import api.*; api.routes.search must go through services,
    # not directly into cinemateca.search. See .importlinter.
    "import-linter>=2.0",
]

# ── Ferramentas de desenvolvimento ────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Same rule selection as before; moved under [tool.ruff.lint] per the
# current ruff schema (top-level select/ignore is deprecated).
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # linha longa (black já cuida)

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: fast, model-free tests; the default CI gate (no torch/transformers weights).",
    "heavy: requires the `full` extra / model wheels (mocked weights ok, real imports needed).",
    "acceptance: runs against real on-disk demo artefacts (Jeca Tatu); skipped when absent.",
    "e2e: browser-driven Playwright tests (a11y + UI render smoke).",
]

# ── uv ────────────────────────────────────────────────────────────────────────
[tool.uv]
# Committed lockfile (was deferred during config-only uv adoption). Root
# cause of the original install rot was an unbounded transformers floor with
# NO committed lock, so resolvers drifted to transformers 5.x per machine.
# The fix is the bounded pin (transformers>=4.44,<5) PLUS this committed
# lock. torch is intentionally locked from PyPI (default index): PyPI ships
# cross-platform wheels (Linux manylinux / macOS / Windows) so `uv sync`
# works everywhere. A pytorch-cpu-index pin was tried and rejected — that
# index has no Linux x86_64 wheel for the resolved torch, breaking Linux
# installs (the opposite of this project's deployment-ease goal). GPU users
# get the CUDA-enabled PyPI manylinux torch automatically; no override needed.
# Note: CPU-only Linux users also receive this CUDA-enabled manylinux wheel —
# PyPI ships no CPU-only Linux torch wheel; this is an accepted limitation.
